# aoc-2016

./: Cargo.toml  tasks.py
benchmark/: Cargo.toml
benchmark/benches/: benchmark.rs  criterion.rs  iai.rs
day01/src/: lib.rs
day02/src/: lib.rs
day03/src/: lib.rs
day05/: Cargo.toml
day05/src/: lib.rs
day09/src/: lib.rs
day10/src/: lib.rs
day11/: Cargo.toml
day11/src/: lib.rs
day12/src/: lib.rs
day13/: Cargo.toml
day13/src/: lib.rs
day14/: Cargo.toml
day14/src/: lib.rs
day15/: Cargo.toml
day15/src/: lib.rs
day16/src/: lib.rs
day17/: Cargo.toml
day17/src/: lib.rs
day18/src/: lib.rs  main.rs
day19/: Cargo.toml  prototype.py  prototype2.py
day19/src/: lib.rs  main.rs
day20/src/: lib.rs
day21/src/: lib.rs
day22/: Cargo.toml
day22/src/: lib.rs
day23/: Cargo.toml
day23/src/: lib.rs  main.rs
day24/: Cargo.toml
day24/src/: lib.rs
