[workspace]
resolver = "2"
members = [ "benchmark", "day01", "day02", "day03", "day05", "day09", "day10", "day11", "day12", "day13", "day14", "day15"]

[workspace.metadata]
year = 2016

[workspace.metadata.day05]
start_time = 2025-07-13T14:32:10.168824

[workspace.metadata.day09]
start_time = 2025-07-13T14:54:08.384618

[workspace.metadata.day10]
start_time = 2025-07-13T15:07:00.443609

[workspace.metadata.day11]
start_time = 2025-07-13T15:47:49.821698

[workspace.metadata.day12]
start_time = 2025-07-13T18:59:19.522244

[workspace.metadata.day13]
start_time = 2025-07-13T19:09:54.613680

[workspace.metadata.day14]
start_time = 2025-07-13T19:32:20.183496

[workspace.metadata.day15]
start_time = 2025-07-13T20:03:59.339640
