[workspace]
resolver = "2"
members = [ "benchmark", "day01", "day02", "day03", "day05", "day09", "day10", "day11", "day12", "day13", "day14", "day15", "day16", "day17", "day18", "day19", "day20", "day21", "day22", "day23", "day24"]

[workspace.metadata]
year = 2016

[workspace.metadata.day05]
start_time = 2025-07-13T14:32:10.168824

[workspace.metadata.day09]
start_time = 2025-07-13T14:54:08.384618

[workspace.metadata.day10]
start_time = 2025-07-13T15:07:00.443609

[workspace.metadata.day11]
start_time = 2025-07-13T15:47:49.821698

[workspace.metadata.day12]
start_time = 2025-07-13T18:59:19.522244

[workspace.metadata.day13]
start_time = 2025-07-13T19:09:54.613680

[workspace.metadata.day14]
start_time = 2025-07-13T19:32:20.183496

[workspace.metadata.day15]
start_time = 2025-07-13T20:03:59.339640

[workspace.metadata.day16]
start_time = 2025-07-13T20:21:36.428780

[workspace.metadata.day17]
start_time = 2025-07-13T20:33:01.216463
completion_time = 2025-07-13T21:01:13.965683

[workspace.metadata.day18]
start_time = 2025-07-13T21:02:54.513244
completion_time = 2025-07-13T21:09:39.487805

[workspace.metadata.day19]
start_time = 2025-07-13T21:11:20.550004

[workspace.metadata.day20]
start_time = 2025-07-15T21:45:26.859566

[workspace.metadata.day21]
start_time = 2025-07-15T22:24:08.023447

[workspace.metadata.day22]
start_time = 2025-07-15T22:45:49.874083
completion_time = 2025-07-16T00:16:28.424611

[workspace.metadata.day23]
start_time = 2025-07-16T00:18:56.794110
completion_time = 2025-07-16T00:35:32.259585

[workspace.metadata.day24]
start_time = 2025-07-16T00:43:25.149751
completion_time = 2025-07-16T01:05:17.332389
